--- a/app/index.html
+++ b/app/index.html
@@ -22,19 +22,17 @@
                     <label for="valor">Valor</label>
                     <input id="valor" type="number" class="form-control"  min="0.01" step="0.01" value="0.0" required />
                 </div>
-                
                 <button class="btn btn-primary" type="submit">Incluir</button>
+                <button id="buttonImport" class="btn btn-primary" type="button">Importar</button>
             </form>
         <br>
         <br>
         <div id="negotiationsView"></div>
         <script src="lib/jquery.min.js"></script>
-        <script src="js/models/Negotiation.js"></script>
-        <script src="js/controllers/NegotiationController.js"></script>
-        <script src="js/models/Negotiations.js"></script>
-        <script src="js/views/View.js"></script>
-        <script src="js/views/NegotiationsView.js"></script>
-        <script src="js/views/MessageView.js"></script>
-        <script src="js/app.js"></script>
+        <script src="lib/system.js"></script>
+		<script>
+			System.defaultJSExtensions = true;
+			System.import('js/app.js').catch(err => console.error(err));
+       </script>
     </body>
 </html>
